Overflow Fix

--- a/public/style/scss/main.scss
+++ b/public/style/scss/main.scss
@@ -8,6 +8,7 @@
 
 body {
   background: $background;
+  overflow-y: hidden;
 
   &.noOverflow {
     overflow: hidden;
